--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Data Analysis in Social Science 3
+description: A course taught at the University of Exeter in 2018.
+show_downloads: "true"
