Set theme jekyll-theme-dinky

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-dinky
 title: Data Analysis in Social Science 3
 description: A course taught at the University of Exeter in 2018.
 show_downloads: "true"
