adding index to docs

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,4 +4,4 @@ language:
     chapter_name: "Chapter "
 delete_merged_file: true
 output_dir: "docs"
-rmd_files: ["joiningData.Rmd", "tidyData.Rmd"]
+rmd_files: ["index.Rmd", "joiningData.Rmd", "tidyData.Rmd"]
