--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,4 +3,5 @@ delete_merged_file: true
 output_dir: "docs"
 before_chapter_script: ["removeObjects.R"]
 rmd_files: ["index.Rmd", "moduleOutline.Rmd",
-            "assignment.Rmd", "joiningData.Rmd", "tidyData.Rmd", "dataVis.Rmd"]
+            "assignment.Rmd", "joiningData.Rmd", "tidyData.Rmd", "dataVis.Rmd",
+            "datavis2.Rmd"]
