--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,4 +4,4 @@ output_dir: "docs"
 before_chapter_script: ["removeObjects.R"]
 rmd_files: ["index.Rmd", "moduleOutline.Rmd",
             "assignment.Rmd", "joiningData.Rmd", "tidyData.Rmd", "dataVis.Rmd",
-            "datavis2.Rmd"]
+            "datavis2.Rmd", "modelling.Rmd"]
