--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,7 +2,7 @@ book_filename: "datan3"
 delete_merged_file: true
 output_dir: "docs"
 before_chapter_script: ["removeObjects.R"]
-rmd_files: ["index.Rmd", "moduleOutline.Rmd",
-            "assignment.Rmd", "readData.Rmd", "transformData.Rmd",
+rmd_files: ["index.Rmd",
+            "readData.Rmd", "transformData.Rmd",
             "joiningData.Rmd", "iteration.Rmd", "tidyData.Rmd", 
             "dataVis.Rmd", "dataVis2.Rmd", "rmarkdown.Rmd", "modelling.Rmd"]
